src/index.css
html,
body,
.lato {
  font-family: "Lato", sans-serif !important;
}

html {
  transition: background-color 0.1s ease-in-out;
}

blockquote p {
  white-space: pre;
}

.section {
  padding-top: 0.5rem !important;
}

h1,
.lobster,
.card-header-title {
  font-family: "Lobster Two", cursive;
}

.card-header-title .image {
  transition: height 0.1s ease-in-out, width 0.1s ease-in-out;
}

.card-header-title .text {
  transition: font-size 0.1s ease-in-out;
}

.card-header-subtitle {
  padding: 0 1rem;
  padding-bottom: 1rem;
}

.card {
  transition: margin 0.1s ease-in-out;
}

.card-header {
  flex-wrap: wrap;
  width: 100%;
  border-width: 0;
  cursor: pointer;
}

.card-header-date {
  margin-left: auto;
}

.card-index {
  color: #3f3f3f;
  border-radius: 90px;
  border: solid #3f3f3f 3px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: font-size 0.1s ease-in-out;
}

.card-index.is-closed {
  font-size: 1.4em;
  min-width: 40px;
  min-height: 40px;
}

.card-index.is-open {
  font-size: 2.1em;
  min-width: 60px;
  min-height: 60px;
}

h2,
h3,
h4,
h5,
h6,
.oswald {
  font-family: "Oswald", sans-serif;
}

blockquote {
  box-shadow: none !important;
}

.button.is-menu {
  padding-left: 0;
  margin-top: 1rem;
  height: 52px;
  position: sticky;
  top: 0;
  z-index: 666;
}

.hero {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
}

.hero .title {
  margin: 0 !important;
}

@media only screen and (max-width: 1023px) {
  .hero .title {
    word-wrap: break-word;
    max-width: 50%;
  }
}

.navbar-brand {
  width: 100%;
}

.external-links {
  margin-left: auto;
  order: 2;
}

.external-links a {
  margin-left: 20px;
}

.icon-1,
.icon-2,
.icon-3,
.discord {
  transition: fill 0.1s ease-in-out;
}

.discord {
  fill: #4a4a4a;
  height: 100%;
}

.arrow-dsc {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid #000000;
}

.arrow-asc {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid #000000;
}

.random {
  margin-bottom: 15px;
}

.random-list {
  width: 205px;
  margin-right: 10px;
}

.random-roll {
  width: 145px;
  margin-right: 10px;
}

.random-result {
  height: 40px;
  line-height: 40px;
}

.random-result.is-visible-mobile {
  padding-left: 16px;
}

.tabs li a {
  border-width: 0;
}

.tabs li.is-active a {
  border-width: 2px;
  font-weight: bold;
}

.cookie-banner {
  position: fixed;
  bottom: 0;
  width: 100%;
  background-color: #3f3f3f;
  color: #fff;
  z-index: 666;
}

.panel-block {
  background-color: #fff;
}

